RESOLVED FIXED109346
Fix ASSERT when the Web Content Process crashes
https://bugs.webkit.org/show_bug.cgi?id=109346
Summary Fix ASSERT when the Web Content Process crashes
Sam Weinig
Reported 2013-02-08 21:47:41 PST
Fix ASSERT when the Web Content Process crashes
Attachments
Patch (1.70 KB, patch)
2013-02-08 21:50 PST, Sam Weinig
simon.fraser: review+
Sam Weinig
Comment 1 2013-02-08 21:50:58 PST
Sam Weinig
Comment 2 2013-02-08 22:15:11 PST
Note You need to log in before you can comment on or make changes to this bug.