Fix ASSERT when the Web Content Process crashes https://bugs.webkit.org/show_bug.cgi?id=109346

Reviewed by Simon Fraser.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processDidCrash):
We need to remove ourselves as a message receiver before calling out to the client, as
the client might want to re-add us (as Safari does).

git-svn-id: svn://svn.chromium.org/blink/trunk@142350 bbb929c8-8fbe-4397-9dbb-9b2b20218538