third_party/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -3564,6 +3564,8 @@ void WebPageProxy::processDidCrash()
 {
     ASSERT(m_pageClient);
 
+    m_process->removeMessageReceiver(Messages::WebPageProxy::messageReceiverName(), m_pageID);
+
     m_isValid = false;
     m_isPageSuspended = false;
 
@@ -3679,8 +3681,6 @@ void WebPageProxy::processDidCrash()
     dismissCorrectionPanel(ReasonForDismissingAlternativeTextIgnored);
     m_pageClient->dismissDictionaryLookupPanel();
 #endif
-
-    m_process->removeMessageReceiver(Messages::WebPageProxy::messageReceiverName(), m_pageID);
 }
 
 WebPageCreationParameters WebPageProxy::creationParameters() const
